# reddit-auto-mod

./: .gitignore  CONFIG_FILE_GUIDE.md  CREDENTIALS_FLOW.md  INSTALL.md  MANIFEST.in  README.md  TESTING.md  config.template.json  explainlikeimfive.faiss  pyproject.toml  setup.py
BackEnd/ControlPlane/: FetchDataAPI.py
BackEnd/DataProcessingPlane/: DataProcessingAPI.py
BackEnd/DataProcessingPlane/PostSimilarity/: PostSimilarity.py  explainlikeimfive_ids.pkl
BackEnd/DataProcessingPlane/PostSummarization/: TextSummarization.py
BackEnd/DataProcessingPlane/RuleViolation/: RuleViolation.py
BackEnd/IndexSetup/: Index.py
BackEnd/Utils/: MongoWrapper.py  RedditWrapper.py
FrontEnd/: package-lock.json  package.json  vite.config.js
FrontEnd/src/: App.jsx  index.css
FrontEnd/src/components/: Configure.jsx  Home.jsx
FrontEnd/src/services/: api.js
cli/: __init__.py  config.py  main.py  setup.py  start.py
reddit_auto_mod.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
